# opentelemetry-python

./: .gitignore  BUILD  docs-requirements.txt  mypy-relaxed.ini  mypy.ini  pants.toml  pyproject.toml  reproduce.py  script.py  tox.ini
demo/: busywait.py  cpu_time.py  docker-compose.yml  grafanadash.json  logging_metric_reader.py  otelcolconfig.yaml  prometheus.yml  testmetrics.py  worker.py
docs/: conf.py
docs/examples/in-process-collector-exporter/: Makefile  go.mod  go.sum  requirements.txt  try_export.py  wrapper.go
exporter/opentelemetry-exporter-foobar/: repro.sh  setup.cfg  setup.py
exporter/opentelemetry-exporter-prometheus/: test-requirements.txt
exporter/opentelemetry-exporter-prometheus/tests/: test_prometheus_text_format.py
gometrictest/: go.mod  main.go  output.json
opentelemetry-api/: BUILD  test-requirements.txt
opentelemetry-api/tests/attributes/: test_attributes.py
opentelemetry-api/tests/context/: BUILD  base_context.py  test_contextvars_context.py
opentelemetry-api/tests/entrypointexperiment/: test_entrypoints.py
opentelemetry-api/tests/propagators/: BUILD
opentelemetry-otelcol/: .gitignore  Makefile  ocb-manifest.yaml  pyproject.toml  test-requirements.txt
opentelemetry-otelcol/go/: components.go  go.mod  go.sum  main.go  shared.go
opentelemetry-otelcol/go/shared/: shared.go
opentelemetry-otelcol/src/opentelemetry/otelcol/: __init__.py  _wrapper.py
opentelemetry-otelcol/tests/: test_otelcol.py
scripts/: eachdist.py
test-dist-info/src/: BUILD  fakeimports.py
tests/: BUILD
tests/opentelemetry-test-utils/: BUILD  test-requirements.txt
(+33 files in other folders)
